# NO3SYS

./: README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml
examples/: quickstart.py
no3sys/: __init__.py  system.py
no3sys/core/: __init__.py  curvature.py  fork.py  infini_gen.py  validator.py
no3sys/engines/: __init__.py  generator.py  reasoner.py  retriever.py
no3sys/manifolds/: __init__.py  circle.py  heptagon.py  hexagon.py  language.py  pentagon.py  square.py  triangle.py
tests/: test_curvature.py  test_fork.py  test_heptagon.py  test_infini_gen.py  test_system.py
